# klipperctl

./: CLAUDE.md  README.md  TODO.md  TUI_TODO.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: CLI.md  TUI.md
src/klipperctl/: __init__.py  __main__.py  cli.py  client.py  config.py  filtering.py  output.py
src/klipperctl/commands/: auth.py  config_cmd.py  files.py  history.py  power.py  print_cmd.py  printer.py  queue.py  server.py  system.py  tui_cmd.py  update.py
src/klipperctl/tui/: __init__.py  app.py
src/klipperctl/tui/screens/: __init__.py  commands.py  console.py  dashboard.py
src/klipperctl/tui/widgets/: __init__.py  dashboard_console.py  heater_chart.py  status.py  temperatures.py
tests/: conftest.py
tests/functional/: _harness.py  conftest.py  test_all_commands.py  test_file_transfers.py  test_harness.py  test_printer.py  test_tui.py  test_tui_dashboard_console.py  test_tui_full_console.py  test_tui_heater_chart.py  test_workflows.py
tests/unit/: test_cli.py  test_commands.py  test_commands_phase2.py  test_commands_phase3.py  test_commands_phase4.py  test_config.py  test_filtering.py  test_output.py  test_tui_app.py  test_tui_cmd.py  test_tui_command_screens.py  test_tui_screens.py  test_tui_widgets.py
